# Shift_CLI

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  context.md  problem_stmt.md  pyproject.toml  run_autopilot.py  run_shift_cli.py  workflow.py
.github/workflows/: ci.yml  docker.yml
autopilot/: __init__.py  cli.py  config.py  executor.py
autopilot/agents/: __init__.py  pipeline.py  prompts.py
autopilot/foundry/: __init__.py
autopilot/hitl/: __init__.py  questioner.py
autopilot/memory/: __init__.py  store.py
shift_cli/: __init__.py  cli.py  config.py  executor.py
shift_cli/agents/: __init__.py  pipeline.py  prompts.py
shift_cli/foundry/: __init__.py
shift_cli/hitl/: __init__.py  questioner.py
shift_cli/memory/: __init__.py  store.py
