# AutoPilot — AI-Powered Terminal Automation CLI
# PyPI package: pip install autopilot-cli
# CLI command:  autopilot

[project]
name = "autopilot-cli"
version = "0.1.0"
description = "AutoPilot — AI-Powered Terminal Automation Agent. Natural language to shell commands with a 3-agent pipeline (Planner → Researcher → Writer), risk-aware execution, and interactive CLI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAJ"}
]
keywords = [
    "ai", "terminal", "automation", "cli", "agents",
    "azure", "foundry", "devops", "shell", "commands"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "azure-identity>=1.17.0",
    "azure-ai-projects>=2.1.0",
    "json-repair>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

# CLI entry point
[project.scripts]
autopilot = "autopilot.cli:main"

# Package discovery
[tool.hatch.build.targets.wheel]
packages = ["autopilot"]

[tool.hatch.build.targets.sdist]
include = [
    "autopilot/**",
    "README.md",
    "pyproject.toml",
    ".env.example",
]
exclude = [
    "*.sqlite",
    ".env",
    "__pycache__",
    "*.pyc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
